// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header rendering implementation 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HeaderImpl
    site={
      Object {
        "siteMetadata": Object {
          "banner": "testing",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          <mockConstructor
            to="/"
          >
            Regexper
          </mockConstructor>
        </h1>,
        <ul
          className="list"
        >
          <li>
            <a
              href="https://gitlab.com/javallone/regexper-static"
              rel="external noopener noreferrer"
              target="_blank"
            >
              <Gitlab
                color="currentColor"
                size="24"
              />
              Source on GitLab
            </a>
          </li>
          <li>
            <mockConstructor
              to="/privacy"
            >
              Privacy Policy
            </mockConstructor>
          </li>
        </ul>,
      ],
      "className": "header",
      "data-banner": "testing",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <mockConstructor
            to="/"
          >
            Regexper
          </mockConstructor>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Regexper",
            "to": "/",
          },
          "ref": null,
          "rendered": "Regexper",
          "type": [MockFunction],
        },
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <a
                href="https://gitlab.com/javallone/regexper-static"
                rel="external noopener noreferrer"
                target="_blank"
              >
                <Gitlab
                  color="currentColor"
                  size="24"
                />
                Source on GitLab
              </a>
            </li>,
            <li>
              <mockConstructor
                to="/privacy"
              >
                Privacy Policy
              </mockConstructor>
            </li>,
          ],
          "className": "list",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="https://gitlab.com/javallone/regexper-static"
                rel="external noopener noreferrer"
                target="_blank"
              >
                <Gitlab
                  color="currentColor"
                  size="24"
                />
                Source on GitLab
              </a>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Gitlab
                    color="currentColor"
                    size="24"
                  />,
                  "Source on GitLab",
                ],
                "href": "https://gitlab.com/javallone/regexper-static",
                "rel": "external noopener noreferrer",
                "target": "_blank",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "currentColor",
                    "size": "24",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "Source on GitLab",
              ],
              "type": "a",
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <mockConstructor
                to="/privacy"
              >
                Privacy Policy
              </mockConstructor>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Privacy Policy",
                "to": "/privacy",
              },
              "ref": null,
              "rendered": "Privacy Policy",
              "type": [MockFunction],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            <mockConstructor
              to="/"
            >
              Regexper
            </mockConstructor>
          </h1>,
          <ul
            className="list"
          >
            <li>
              <a
                href="https://gitlab.com/javallone/regexper-static"
                rel="external noopener noreferrer"
                target="_blank"
              >
                <Gitlab
                  color="currentColor"
                  size="24"
                />
                Source on GitLab
              </a>
            </li>
            <li>
              <mockConstructor
                to="/privacy"
              >
                Privacy Policy
              </mockConstructor>
            </li>
          </ul>,
        ],
        "className": "header",
        "data-banner": "testing",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <mockConstructor
              to="/"
            >
              Regexper
            </mockConstructor>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Regexper",
              "to": "/",
            },
            "ref": null,
            "rendered": "Regexper",
            "type": [MockFunction],
          },
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <a
                  href="https://gitlab.com/javallone/regexper-static"
                  rel="external noopener noreferrer"
                  target="_blank"
                >
                  <Gitlab
                    color="currentColor"
                    size="24"
                  />
                  Source on GitLab
                </a>
              </li>,
              <li>
                <mockConstructor
                  to="/privacy"
                >
                  Privacy Policy
                </mockConstructor>
              </li>,
            ],
            "className": "list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="https://gitlab.com/javallone/regexper-static"
                  rel="external noopener noreferrer"
                  target="_blank"
                >
                  <Gitlab
                    color="currentColor"
                    size="24"
                  />
                  Source on GitLab
                </a>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Gitlab
                      color="currentColor"
                      size="24"
                    />,
                    "Source on GitLab",
                  ],
                  "href": "https://gitlab.com/javallone/regexper-static",
                  "rel": "external noopener noreferrer",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "currentColor",
                      "size": "24",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "Source on GitLab",
                ],
                "type": "a",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <mockConstructor
                  to="/privacy"
                >
                  Privacy Policy
                </mockConstructor>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Privacy Policy",
                  "to": "/privacy",
                },
                "ref": null,
                "rendered": "Privacy Policy",
                "type": [MockFunction],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Header rendering implementation with no banner 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HeaderImpl
    site={
      Object {
        "siteMetadata": Object {
          "banner": false,
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          <mockConstructor
            to="/"
          >
            Regexper
          </mockConstructor>
        </h1>,
        <ul
          className="list"
        >
          <li>
            <a
              href="https://gitlab.com/javallone/regexper-static"
              rel="external noopener noreferrer"
              target="_blank"
            >
              <Gitlab
                color="currentColor"
                size="24"
              />
              Source on GitLab
            </a>
          </li>
          <li>
            <mockConstructor
              to="/privacy"
            >
              Privacy Policy
            </mockConstructor>
          </li>
        </ul>,
      ],
      "className": "header",
      "data-banner": null,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <mockConstructor
            to="/"
          >
            Regexper
          </mockConstructor>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Regexper",
            "to": "/",
          },
          "ref": null,
          "rendered": "Regexper",
          "type": [MockFunction],
        },
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <a
                href="https://gitlab.com/javallone/regexper-static"
                rel="external noopener noreferrer"
                target="_blank"
              >
                <Gitlab
                  color="currentColor"
                  size="24"
                />
                Source on GitLab
              </a>
            </li>,
            <li>
              <mockConstructor
                to="/privacy"
              >
                Privacy Policy
              </mockConstructor>
            </li>,
          ],
          "className": "list",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="https://gitlab.com/javallone/regexper-static"
                rel="external noopener noreferrer"
                target="_blank"
              >
                <Gitlab
                  color="currentColor"
                  size="24"
                />
                Source on GitLab
              </a>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Gitlab
                    color="currentColor"
                    size="24"
                  />,
                  "Source on GitLab",
                ],
                "href": "https://gitlab.com/javallone/regexper-static",
                "rel": "external noopener noreferrer",
                "target": "_blank",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "currentColor",
                    "size": "24",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "Source on GitLab",
              ],
              "type": "a",
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <mockConstructor
                to="/privacy"
              >
                Privacy Policy
              </mockConstructor>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Privacy Policy",
                "to": "/privacy",
              },
              "ref": null,
              "rendered": "Privacy Policy",
              "type": [MockFunction],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            <mockConstructor
              to="/"
            >
              Regexper
            </mockConstructor>
          </h1>,
          <ul
            className="list"
          >
            <li>
              <a
                href="https://gitlab.com/javallone/regexper-static"
                rel="external noopener noreferrer"
                target="_blank"
              >
                <Gitlab
                  color="currentColor"
                  size="24"
                />
                Source on GitLab
              </a>
            </li>
            <li>
              <mockConstructor
                to="/privacy"
              >
                Privacy Policy
              </mockConstructor>
            </li>
          </ul>,
        ],
        "className": "header",
        "data-banner": null,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <mockConstructor
              to="/"
            >
              Regexper
            </mockConstructor>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Regexper",
              "to": "/",
            },
            "ref": null,
            "rendered": "Regexper",
            "type": [MockFunction],
          },
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <a
                  href="https://gitlab.com/javallone/regexper-static"
                  rel="external noopener noreferrer"
                  target="_blank"
                >
                  <Gitlab
                    color="currentColor"
                    size="24"
                  />
                  Source on GitLab
                </a>
              </li>,
              <li>
                <mockConstructor
                  to="/privacy"
                >
                  Privacy Policy
                </mockConstructor>
              </li>,
            ],
            "className": "list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="https://gitlab.com/javallone/regexper-static"
                  rel="external noopener noreferrer"
                  target="_blank"
                >
                  <Gitlab
                    color="currentColor"
                    size="24"
                  />
                  Source on GitLab
                </a>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Gitlab
                      color="currentColor"
                      size="24"
                    />,
                    "Source on GitLab",
                  ],
                  "href": "https://gitlab.com/javallone/regexper-static",
                  "rel": "external noopener noreferrer",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "currentColor",
                      "size": "24",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "Source on GitLab",
                ],
                "type": "a",
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <mockConstructor
                  to="/privacy"
                >
                  Privacy Policy
                </mockConstructor>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Privacy Policy",
                  "to": "/privacy",
                },
                "ref": null,
                "rendered": "Privacy Policy",
                "type": [MockFunction],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Header rendering with query 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "query": "
  query HeaderQuery {
    site {
      siteMetadata {
        banner
      }
    }
  }
",
      "render": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [MockFunction],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "query": "
  query HeaderQuery {
    site {
      siteMetadata {
        banner
      }
    }
  }
",
        "render": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [MockFunction],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
